fix alignment on homepage close #5

--- a/source/assets/stylesheets/atoms/_callout.scss
+++ b/source/assets/stylesheets/atoms/_callout.scss
@@ -12,6 +12,8 @@
 
 .callout-homepage {
   margin-top: -5rem;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .callout-illustration {
